# vibing

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: code-reviewer.md  test-engineer.md
.cursor/: cli.json  mcp.json
.devcontainer/: Dockerfile  bash_preference.bash  devcontainer.json  post_create_setup.sh  sync-claude-statusline.py
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-08T01-47-18-734Z.yml  page-2026-06-08T01-59-13-484Z.yml  page-2026-06-08T02-01-21-344Z.yml  page-2026-06-08T02-02-55-846Z.yml  page-2026-06-08T02-03-07-888Z.yml  page-2026-06-08T02-03-32-859Z.yml  page-2026-06-08T02-20-32-007Z.yml  page-2026-06-08T02-20-44-801Z.yml  page-2026-06-08T02-20-49-065Z.yml  page-2026-06-08T02-22-16-417Z.yml  page-2026-06-08T02-22-48-519Z.yml  page-2026-06-08T02-22-53-300Z.yml
apps/api/: CLAUDE.md  pyproject.toml
apps/api/src/vibing_api/: main.py
apps/api/src/vibing_api/api/routes/: agent_sessions.py  config.py  devcontainers.py  diagnostics.py  runtime.py  settings.py  status.py  workspaces.py
apps/api/src/vibing_api/api/schemas/: workspaces.py
apps/api/src/vibing_api/cli/: __init__.py
apps/api/src/vibing_api/core/: commands.py  config.py  database.py  errors.py  reducer.py  runtime_channel.py  runtime_events.py  schema.py  settings_store.py  vocabularies.py
apps/api/src/vibing_api/dev/: sample_data.py
apps/api/src/vibing_api/repositories/: __init__.py  agent_sessions.py  approvals.py  devcontainers.py  inbox.py
apps/api/tests/: conftest.py  test_agent_channel.py  test_agent_sessions.py  test_cli.py  test_config.py  test_database.py  test_devcontainer_lifecycle.py  test_diagnostics.py  test_error_responses.py  test_reducer.py  test_repositories.py  test_runtime_channel.py  test_runtime_events.py  test_sample_data.py  test_settings.py  test_settings_store.py  test_spa_fallback.py  test_static_serving.py  test_workspaces_api.py
apps/web/: CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
deploy/: supervisord.conf
devcontainer_examples/sandbox/: README.md
docs/: deployment.md  domain-model.md  foundation-api.md  overview.md  runtime-boundaries.md
docs/adr/: 0001-devcontainer-source-is-a-single-local-path.md  0002-inbox-is-a-projection-of-the-runtime-event-stream.md  0003-runtimes-connect-to-the-control-plane-over-tcp-ip-in-a-star-topology.md  (+8 more)
scripts/: build-image.sh  refresh-sandbox-wheel.sh  start.sh
src/: CLAUDE.md
(+264 files in other folders)
