[project]
name = "vibing"
version = "0.1.0"
description = "Local operations center for managing AI coding agents across isolated devcontainers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "logzero>=1.7.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "typer>=0.26.4",
    "uvicorn[standard]>=0.48.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[project.scripts]
vibing = "vibing_cli:app"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = [
    "vibing_api",
    "vibing_devcontainer_runtime",
    "vibing_host_runtime",
    "vibing_cli",
    "vibing_protocol",
    "vibing_runtime_client",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["logzero"]
ignore_missing_imports = true
