[project]
name = "vibing-api"
version = "0.1.0"
description = "Vibing FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "typer>=0.26.2",
    "uvicorn[standard]>=0.48.0",
    "vibing-host-runtime",
    "vibing-protocol",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[project.scripts]
vibing = "vibing_api.cli:app"

[tool.uv.sources]
vibing-host-runtime = { path = "../../packages/host_runtime", editable = true }
vibing-protocol = { path = "../../packages/protocol", editable = true }

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py313"
